Antivirus plugin is almost ready. Tasks are completed but profile should be tested

--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
@@ -1,1 +1,18 @@
-Antivirus=Sample Profile Editor
+Antivirus=Antivirus
+ON=On
+OFF=Off
+ANTIVIRUS_STATUS=Antivirus Status
+USB_SCANNING=USB Scan
+EXECUTION_FREQUENCY=Running Frequency (h)
+UPDATING_INTERVAL=Updating Interval (h)
+SCANNED_FOLDERS=Scanned Folders
+SCAN_DOWNLOADED_FILES=Scan Downloaded Files
+FILE_FOR_DOWNLOADED_FILES=File for Downloaded Files
+ANTIVIRUS_VERSION=Antivirus Version
+FILL_ALL_FIELDS=Please fill all fields...
+FOLDER_PATH=Folder Path(s)
+FOLDER_PATH_DESCRIPTION=If you want to scan multiple folders with different paths, you should use ';' character between two folder paths...
+ENTER_FOLDER_PATH=Please enter folder path...
+ANTIVIRUS_VERSION_TITLE=Current Antivirus Program Version
+ERROR_ON_EXECUTE=Unpected error while accessing antivirus program version...
+EXIT=Exit
