--- a/lider-console-antivirus/OSGI-INF/l10n/bundle.properties
+++ b/lider-console-antivirus/OSGI-INF/l10n/bundle.properties
@@ -1,3 +1,4 @@
 commands.category=LiderConsole commands
 command.profile=Antivirus Profile
 command.task=Antivirus Task
+command.version.task=Antivirus Version
