--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
@@ -1,1 +1,18 @@
-Antivirus=Profil Editï¿½rï¿½
+Antivirus=Antivirüs
+ON=Aç\u0131k
+OFF=Kapal\u0131
+ANTIVIRUS_STATUS=Antivirüs Çal\u0131\u015Fma Durumu
+USB_SCANNING=USB Tara
+EXECUTION_FREQUENCY=Çal\u0131\u015Fma S\u0131kl\u0131\u011F\u0131 (saat)
+REFRESH_TIME_INTERVAL=Güncelleme Aral\u0131\u011F\u0131 (saat)
+SCANNED_FOLDERS=Taranacak Klasörler
+SCAN_DOWNLOADED_FILES=\u0130ndirilen Dosyalar\u0131 Tara
+FILE_FOR_DOWNLOADED_FILES=\u0130ndirilen Dosyalar \u0130çin Klasör
+ANTIVIRUS_VERSION=Antivirüs Versiyonu
+FILL_ALL_FIELDS=Lütfen tüm alanlar\u0131 doldurunuz...
+FOLDER_PATH=Taranacak Dizin/ler
+FOLDER_PATH_DESCRIPTION=Birden çok dizin taramak istiyorsan\u0131z her bir pathden sonra ';' kullan\u0131n\u0131z...
+ENTER_FOLDER_PATH=Lütfen öncelikle dizin izini giriniz...
+ANTIVIRUS_VERSION_TITLE=Mevcut Antivirüs Program\u0131 Versiyonu
+ERROR_ON_EXECUTE=Versiyon bilgisine ula\u015F\u0131l\u0131rken beklenmedik hata!
+EXIT=Ç\u0131k\u0131\u015F
