--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
@@ -16,3 +16,4 @@ ENTER_FOLDER_PATH=Please enter folder path...
 ANTIVIRUS_VERSION_TITLE=Current Antivirus Program Version
 ERROR_ON_EXECUTE=Unpected error while accessing antivirus program version...
 EXIT=Exit
+FILL_SELECTED_FIELDS=Fill selected fields...
