--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
@@ -11,8 +11,9 @@ FILE_FOR_DOWNLOADED_FILES=\u0130ndirilen Dosyalar \u0130çin Klasör
 ANTIVIRUS_VERSION=Antivirüs Versiyonu
 FILL_ALL_FIELDS=Lütfen tüm alanlar\u0131 doldurunuz...
 FOLDER_PATH=Taranacak Dizin/ler
-FOLDER_PATH_DESCRIPTION=Birden çok dizin taramak istiyorsan\u0131z her bir pathden sonra ';' kullan\u0131n\u0131z...
+FOLDER_PATH_DESCRIPTION=Birden çok dizin taramak istiyorsan\u0131z her bir pathden sonra ',' kullan\u0131n\u0131z...
 ENTER_FOLDER_PATH=Lütfen öncelikle dizin izini giriniz...
 ANTIVIRUS_VERSION_TITLE=Mevcut Antivirüs Program\u0131 Versiyonu
 ERROR_ON_EXECUTE=Versiyon bilgisine ula\u015F\u0131l\u0131rken beklenmedik hata!
 EXIT=Ç\u0131k\u0131\u015F
+FILL_SELECTED_FIELDS=Seçilen alanlar\u0131 doldurunuz...
