add missing plugin label

--- a/lider-console-antivirus/OSGI-INF/l10n/bundle.properties
+++ b/lider-console-antivirus/OSGI-INF/l10n/bundle.properties
@@ -1,4 +1,5 @@
 commands.category=LiderConsole commands
 command.profile=Antivirus Profile
-command.task=Antivirus Task
+command.task=Antivirus Scan
 command.version.task=Antivirus Version
+plugin.label=Antivirus
