--- a/lider-console-antivirus/OSGI-INF/l10n/bundle_tr.properties
+++ b/lider-console-antivirus/OSGI-INF/l10n/bundle_tr.properties
@@ -1,4 +1,5 @@
 commands.category=LiderConsole commands
 command.profile=Antivirus Profili
 command.task=Anl\u0131k Tarama
-command.version.task=Antivirus Versiyonu
+command.version.task=Antivirus Sürümü
+plugin.label=Antivirus
