Antivirus requests are ready for testing

--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
@@ -17,3 +17,7 @@ ANTIVIRUS_VERSION_TITLE=Current Antivirus Program Version
 ERROR_ON_EXECUTE=Unpected error while accessing antivirus program version...
 EXIT=Exit
 FILL_SELECTED_FIELDS=Fill selected fields...
+UNEXPECTED_ERROR_ACCESSING_ANTIVIRUS_CONFIGURATION_INFO=Unexpecetd error while accessing antivirus configuration file!
+ANTIVIRUS_CONFIGURATION=Antivirus Configuration File
+ANTIVIRUS_CONFIGURATION_TITLE=Antivirus Configuration File
+ERROR_EMPTY_CONFIGURATION=You can not send empty configuration file!
