--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
@@ -17,3 +17,7 @@ ANTIVIRUS_VERSION_TITLE=Mevcut Antivirüs Program\u0131 Versiyonu
 ERROR_ON_EXECUTE=Versiyon bilgisine ula\u015F\u0131l\u0131rken beklenmedik hata!
 EXIT=Ç\u0131k\u0131\u015F
 FILL_SELECTED_FIELDS=Seçilen alanlar\u0131 doldurunuz...
+UNEXPECTED_ERROR_ACCESSING_ANTIVIRUS_CONFIGURATION_INFO=Antivirus Konfigurasyon Dosyas\u0131na ula\u015F\u0131l\u0131rken beklenmedik hata!
+ANTIVIRUS_CONFIGURATION=Antivirüs Konfigürasyon Dosyas\u0131
+ANTIVIRUS_CONFIGURATION_TITLE=Antivirüs Konfigurasyon Dosyas\u0131
+ERROR_EMPTY_CONFIGURATION=Bo\u015F dosya gönderemezsiniz. Lütfen metin alan\u0131n\u0131 doldurunuz
