updated language on profile screen

--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
@@ -4,7 +4,7 @@ OFF=Kapal\u0131
 ANTIVIRUS_STATUS=Antivirüs Çal\u0131\u015Fma Durumu
 USB_SCANNING=USB Tara
 EXECUTION_FREQUENCY=Çal\u0131\u015Fma S\u0131kl\u0131\u011F\u0131 (saat)
-REFRESH_TIME_INTERVAL=Güncelleme Aral\u0131\u011F\u0131 (saat)
+UPDATING_INTERVAL=Güncelleme Aral\u0131\u011F\u0131 (saat)
 SCANNED_FOLDERS=Taranacak Klasörler
 SCAN_DOWNLOADED_FILES=\u0130ndirilen Dosyalar\u0131 Tara
 FILE_FOR_DOWNLOADED_FILES=\u0130ndirilen Dosyalar \u0130çin Klasör
