--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages.properties
@@ -1,23 +1,27 @@
-Antivirus=Antivirus
-ON=On
-OFF=Off
-ANTIVIRUS_STATUS=Antivirus Status
-USB_SCANNING=USB Scan
-EXECUTION_FREQUENCY=Running Frequency (h)
-UPDATING_INTERVAL=Updating Interval (h)
-SCANNED_FOLDERS=Scanned Folders
-SCAN_DOWNLOADED_FILES=Scan Downloaded Files
-FILE_FOR_DOWNLOADED_FILES=File for Downloaded Files
-ANTIVIRUS_VERSION=Antivirus Version
-FILL_ALL_FIELDS=Please fill all fields...
-FOLDER_PATH=Folder Path(s)
-FOLDER_PATH_DESCRIPTION=If you want to scan multiple folders with different paths, you should use ';' character between two folder paths...
-ENTER_FOLDER_PATH=Please enter folder path...
-ANTIVIRUS_VERSION_TITLE=Current Antivirus Program Version
-ERROR_ON_EXECUTE=Unpected error while accessing antivirus program version...
-EXIT=Exit
-FILL_SELECTED_FIELDS=Fill selected fields...
-UNEXPECTED_ERROR_ACCESSING_ANTIVIRUS_CONFIGURATION_INFO=Unexpecetd error while accessing antivirus configuration file!
+#Eclipse messages class
+#Wed Apr 12 11:03:57 EEST 2017
 ANTIVIRUS_CONFIGURATION=Antivirus Configuration File
 ANTIVIRUS_CONFIGURATION_TITLE=Antivirus Configuration File
-ERROR_EMPTY_CONFIGURATION=You can not send empty configuration file!
+ANTIVIRUS_STATUS=Antivirus Status
+ANTIVIRUS_VERSION=Antivirus Version
+ANTIVIRUS_VERSION_TITLE=Current Antivirus Program Version
+Antivirus=Antivirus
+EG_DOWNLOADS_PARH_DESCRIPTION=scan downloads folder $USER parameter
+ENTER_FOLDER_PATH=Please enter folder path...
+ERROR_EMPTY_CONFIGURATION=You can not send empty configuration file\!
+ERROR_ON_EXECUTE=Unpected error while accessing antivirus program version...
+EXECUTION_FREQUENCY=Running Frequency (h)
+EXIT=Exit
+FILE_FOR_DOWNLOADED_FILES=File for Downloaded Files
+FILL_ALL_FIELDS=Please fill all fields...
+FILL_SELECTED_FIELDS=Fill selected fields...
+FOLDER_PATH=Folder Path(s)
+FOLDER_PATH_DESCRIPTION=If you want to scan multiple folders with different paths, you should use ';' character between two folder paths...
+OFF=Off
+ON=On
+SCANNED_FOLDERS=Scanned Folders
+SCAN_DOWNLOADED_FILES=Scan Downloaded Files
+UNEXPECTED_ERROR_ACCESSING_ANTIVIRUS_CONFIGURATION_INFO=Unexpecetd error while accessing antivirus configuration file\!
+UPDATING_INTERVAL=Updating Interval (h)
+USB_SCANNING=USB Scan
+DOWNLOAD_PATH=/home/$USER/Downloads
