--- a/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
+++ b/lider-console-antivirus/src/tr/org/liderahenk/antivirus/i18n/messages_tr.properties
@@ -11,7 +11,7 @@ FILE_FOR_DOWNLOADED_FILES=\u0130ndirilen Dosyalar \u0130çin Klasör
 ANTIVIRUS_VERSION=Antivirüs Versiyonu
 FILL_ALL_FIELDS=Lütfen tüm alanlar\u0131 doldurunuz...
 FOLDER_PATH=Taranacak Dizin/ler
-FOLDER_PATH_DESCRIPTION=Birden çok dizin taramak istiyorsan\u0131z her bir pathden sonra ',' kullan\u0131n\u0131z...
+FOLDER_PATH_DESCRIPTION=Birden çok dizin taramak istiyorsan\u0131z her bir pathden sonra ',' kullan\u0131n\u0131z... 
 ENTER_FOLDER_PATH=Lütfen öncelikle dizin izini giriniz...
 ANTIVIRUS_VERSION_TITLE=Mevcut Antivirüs Program\u0131 Versiyonu
 ERROR_ON_EXECUTE=Versiyon bilgisine ula\u015F\u0131l\u0131rken beklenmedik hata!
@@ -21,3 +21,4 @@ UNEXPECTED_ERROR_ACCESSING_ANTIVIRUS_CONFIGURATION_INFO=Antivirus Konfigurasyon 
 ANTIVIRUS_CONFIGURATION=Antivirüs Konfigürasyon Dosyas\u0131
 ANTIVIRUS_CONFIGURATION_TITLE=Antivirüs Konfigurasyon Dosyas\u0131
 ERROR_EMPTY_CONFIGURATION=Bo\u015F dosya gönderemezsiniz. Lütfen metin alan\u0131n\u0131 doldurunuz
+DOWNLOAD_PATH=/home/$USER/Downloads
